<resources>
    <string name="app_name">Animalia</string>
    <string name="correo"> Correo/email</string>
    <string name="contrasenia"> Contraseña</string>
    <string name="olvidar"> Olvide mi contraseña</string>
    <string name="registro">Registrarme</string>
    <string name="contrenia2"> Repetir contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="ingresar"> Ingresar</string>
    <string name="enviarcodigo"> Enviar código</string>
    <string name="crearperfil"> Crear cuenta</string>
    <string name="Crear">Registrar </string>
    <string name="perfil">Perfil</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="buscar"> Buscar</string>
    <string name="inicio"> Inicio</string>
    <string name="publicar"> Publicar</string>>
    <string name="salud"> Cuidalo </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="miperfil">Mi perfil</string>
    <string name="nombre" >Usuario</string>
</resources>